fix: alignment of question

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -41,7 +41,7 @@
 }
 
 .blink {
-  animation: blinker 0.5s linear infinite;
+  animation: blinker 1s linear infinite;
 }
 
 @keyframes blinker {
